...

  const handleTakeSurvey = () => {
    navigation.navigate("SurveyStack");
  };

  return (
    <ScrollView testID={"SurveysID"}
      contentContainerStyle={[ScreenStyles.CasiBlue, styles.container]}
    >
      <DrawerButton />
      <Text style={styles.title}>Surveys</Text>
      <View style={styles.boxContainer}>
        {[1, 2, 3, 4].map((quarter) => (
...
    fontWeight: "bold",
    fontSize: 18,
    textAlign: "center",
    flex: 1,
    justifyContent: "center",
  },
  takeSurveyButton: {
    backgroundColor: "#4CAF50",
    width: "80%",
    paddingVertical: 8,
    paddingHorizontal: 12,
    borderRadius: 5,
  },
...
