...
          SURVEY TEST
        </Text>
        <Text style={{ color: "#fff", fontSize: 20 }}>
          User ID: {authState.userId}
        </Text>
        <TouchableOpacity
          testID="TakeSurvey"
          onPress={() => {
            navigation.navigate("SurveyStartBoard", {
              surveyData: mockSurveyData,
            });
          }}
          style={[ScreenStyles.CasiPurple, ScreenStyles.button]}
...
