...

            <DrawerButton />


            <View style={{ flex: 0.5, paddingTop: 20, paddingBottom: 10 }}>
                <Text style={{ color: "#fff", fontSize: 20, textAlign: "center", fontWeight: "bold" }}>Admin</Text>
                <Text style={{ color: "#fff", fontSize: 30, textAlign: "center", fontWeight: "bold" }}>Create Survey</Text>
            </View>

            <View style={{ flex: 7, backgroundColor: "rgba(225,229,245,255)", width: "90%", marginTop: 30, borderRadius: 20, paddingTop: 10 }} >

                <View style={{ flex: 1.3, justifyContent: "flex-start", alignItems: "flex-end", paddingRight: 10 }}>
                    <TouchableOpacity
...
